--- a/index.html
+++ b/index.html
@@ -45,11 +45,8 @@
     </script>
   </head>
 
-  <!-- <body
-    class="bg-very-dark-blue text-light-grey text-base font-base font-normal flex justify-center items-center h-screen"
-  > -->
   <body
-    class="bg-very-dark-blue text-light-grey text-base font-base font-normal flex flex-col items-center mt-[12.2rem] mx-auto"
+    class="bg-very-dark-blue text-light-grey text-base font-base font-normal flex flex-col justify-center items-center h-screen"
   >
     <div
       class="container max-w-[25.8rem] bg-gradient-to-t from-gd-cont-bottom to-gd-cont-top p-[2.2rem] rounded-[2rem]"
@@ -106,7 +103,7 @@
       </div>
     </div>
 
-    <!-- <div class="mt-4">
+    <div class="mt-4">
       Challenge by
       <a
         href="https://www.frontendmentor.io?ref=challenge"
@@ -119,7 +116,7 @@
         target="_blank"
         class="underline"
         >Resha Aditiya</a
-      >. -->
+      >.
     </div>
   </body>
 </html>
