button change to flex

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </template>
         </div>
         <button
-          class="w-full bg-orange text-white p-[.8rem] pt-[.9rem] rounded-full mt-[2rem] font-bold tracking-[.2rem] hover:text-orange hover:bg-white"
+          class="w-full bg-orange text-white p-[.8rem] flex justify-center items-center rounded-full mt-[2rem] font-bold tracking-[.2rem] hover:text-orange hover:bg-white"
           x-on:click="loc = rating == 0 ? 'rate' : 'thanks'"
         >
           SUBMIT
@@ -111,10 +111,7 @@
         class="underline"
         >Frontend Mentor</a
       >. Coded by
-      <a
-        href="https://reshaditiya.com"
-        target="_blank"
-        class="underline"
+      <a href="https://reshaditiya.com" target="_blank" class="underline"
         >Resha Aditiya</a
       >.
     </div>
